# ges-renderer

./: .gitignore  CMakeLists.txt  build.sh  ges-demo.c  ges-demo.h  ges-json.c  ges-json.h  ges-minimal-transition.c  ges-minimal.c  ges-renderer.c  ges-renderer.h  ges-shakem.c
src/: ges-json.c  ges-json.h  ges-renderer.c  ges-renderer.h
tests/: bug-png.c  ges-demo.c  ges-demo.h  ges-minimal-transition.c  ges-minimal.c  ges-tests-format.c  ges-tests.c
